Mon 14 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * htdig/Retriever.cc:
      Don't check for interrupt between popping a URL and processing it,
      so that url_log (db.log) truly contains all URLs seen but not processed.

Mon Jun 14 10:08:01 CEST 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * Tagged release htdig-3-2-0b6

Sun 13 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * db/os_abs.c, (db/os_abs.c.win32 removed):
      Re-fix Cygwin bug (#814268, fixed 25 Apr) so that it won't be
      clobbered by autotools.

Sat 12 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * htdoc/RELEASE.html: Separated bug fixes from new features

    * htdoc/{htdig,htfuzzy}.html, installdir/{htdig,htfuzzy}.1.in:
      Added list of database files used

    * htdoc/{htdump,htmerge,htnotify,htpurge,hts_general,htstat,rundig}.html:
      Hyperlinked COMMON_DIR, BIN_DIR, DATABASE_DIR to attrs.html.

    * htcommon/defaults.cc, htdoc/attrs.html.in:
      Remove reference to deprecated '-l' option (generate URL log) of htdig.

Fri Jun 11 11:48:40 2004  Gilles Detillieux  <grdetil at scrc.umanitoba.ca>

    * htsearch/parser.cc (phrase): Applied Lachlan's patch to prevent endless
      loop when boolean keywords appear in a phrase in boolean match method.

Fri Jun 11 11:26:56 2004  Gilles Detillieux  <grdetil at scrc.umanitoba.ca>

    * db/hash.c (CDB___ham_open): Applied Red Hat's h_hash patch, to ensure
      that hash function always set to something valid.

Fri Jun 11 10:53:49 2004  Gilles Detillieux  <grdetil at scrc.umanitoba.ca>

    * installdir/HtFileType: Added -f to rm command.

    * htsearch/parser.cc (perform_or): Added missing & in if clause.

    * contrib/htdig-3.2.0.spec: Updated for 3.2.0b6.

    * installdir/Makefile.{am,in}: Don't stick $(DESTDIR) in HtFileType.

Thu Jun 10 16:39:36 CEST 2004 Gabriele Bartolini <angusgb at users.sourceforge.net>
